# duckdb-routing

./: .gitignore  CLAUDE.md  CMakeLists.txt  ITALY.md  Makefile  NEXT_STEPS.md  README.md  RELEASE_NOTES_v0.1.0.md  description.yml  devenv.nix  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
examples/: build_estonia_tiles.sh  build_italy_tiles.sh  geometry_macro.sql  italy_route_examples.sql  monaco_end_to_end.sql  monaco_pure_sql.sql  remote_tiles_example.sql  s3_tiles_example.sql  san_marino_to_san_leo.sql  tallinn_to_tartu.sql
rust/: Cargo.toml  routing.h
rust/src/: lib.rs
scripts/: BUILD_EUROPE_TILES.md  build_europe_tiles_with_elevation.sh
src/: config_setting.cpp  travel_time_extension.cpp  valhalla_build_tiles_simple.cpp
src/include/: travel_time_extension.hpp
test/data/: monaco.osm.pbf.auto.routing
test/sql/: monaco_routing.test  travel_time.test  z_integration.test.skip
valhalla-wrapper/: CMakeLists.txt
valhalla-wrapper/include/: valhalla_wrapper.h
valhalla-wrapper/src/: wrapper.cpp
~/.config/fish/: fish_variables
