[package]
name = "routing"
version = "0.1.0"
edition = "2021"

[lib]
name = "routing"
crate-type = ["staticlib", "cdylib"]

[dependencies]
fast_paths = "1.0"
osmpbfreader = "0.16"
geo = "0.29"
wkt = "0.11"
geozero = { version = "0.14", default-features = false, features = ["with-wkb", "with-geo"] }
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rstar = { version = "0.12", features = ["serde"] }
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
